Mon Nov 24 18:30:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_sunos5_sunc++.GNU:
          When using CC 5.5 (SunForte8) then use implicit templates

Mon Nov 24 17:29:30 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * inlcude/makeinclude/rules.local.GNU:
          Added a $(TAO_IDL_DEP) target that emits an error if the
          $(TAO_IDL_DEP) doesn't exist.  Thanks to Carlos for
          motivating this and suggesting the use of /bin/false to force
          make to see the error.

Mon Nov 24 16:59:53 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdio.inl:
          Moved ACE_OS::flock_unlock() to an earlier place in this file
          to fix an internal compiler with MinGW.

Mon Nov 24 07:03:15 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/em3vcpdll.mpt:
        * bin/MakeProjectCreator/templates/em3vcpdllexe.mpt:
        * bin/MakeProjectCreator/templates/em3vcplib.mpt:
        * bin/MakeProjectCreator/templates/em3vcplibexe.mpt:
        * bin/MakeProjectCreator/templates/nmakedll.mpt:
        * bin/MakeProjectCreator/templates/vc6dspdll.mpt:
        * bin/MakeProjectCreator/templates/vc6dsplib.mpt:

          Removed the /Zi option (enable debugging information) from the
          release targets.

Mon Nov 24 05:26:14 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * include/makeinclude/rules.local.GNU:
          Only cleanup shared libraries when shared_libs is defined and
          static libraries when static_libs is defined.  Also, test for
          whether or not the CLEANUP targets in this case are empty, not
          just for existience, since they always exist by this time.

Mon Nov 24 02:38:58 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * include/makeinclude/all_in_one.GNU:
        * include/makeinclude/wrapper_macros.GNU:
        * include/makeinclude/rules.local.GNU: